@@ -1,3 +1,9 @@
+2005-01-07  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-settings-mouse.c: (set_locate_pointer): add Mod2Mask and 
+	Mod4Mask to the modifiers, fix the issue with Numlock activated 
+	(Closes: #149383).
+
 2005-01-07  Sergey V. Udaltsov  <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: optimization - only update the 
